--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "next": "14.2.8",
     "pigeon-maps": "^0.21.6",
     "react": "^18",
