--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.19.3",
     "next": "14.2.8",
-    "pigeon-maps": "^0.21.6",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -22,6 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "react-google-map-wrapper": "^1.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
