--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
@@ -20,7 +22,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
-    "react-google-map-wrapper": "^1.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
