--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "react-select": "^5.8.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
