--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@types/google.maps": "^3.58.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
