--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@types/google.maps": "^3.58.0",
+    "@vercel/kv": "^2.0.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
