--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.1"
+    "react-select": "^5.8.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
