update to use fetch

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_CACHE_PURGE_TOKEN=O0ZFUGbOzjMjaHLcuOG28ls5p0gDFp0iJK1EwnnAhyM=
 VERCEL_PROJECT_ID=prj_V1t3rjLbYB5LdyaSBsoCeJWt5cpW
 VERCEL_DOMAIN=https://gfthailand.vercel.app/
 VERCEL_API_TOKEN=po1muBhiDubYjDfBEIDnM5fc
+VERCEL_TEAM_ID=PqHMhlVNDyM1ckH6vDt2CplY
