--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@types/google.maps": "^3.58.0",
     "@vercel/blob": "^0.25.0",
     "@vercel/kv": "^2.0.0",
-    "next": "14.2.8",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.1",
