--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@react-google-maps/api": "^2.20.3",
     "@types/google.maps": "^3.58.0",
     "@vercel/blob": "^0.25.0",
     "@vercel/kv": "^2.0.0",
