--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@react-google-maps/api": "^2.20.3",
+    "@tabler/icons-react": "^3.24.0",
     "@types/google.maps": "^3.58.0",
     "@vercel/blob": "^0.25.0",
     "@vercel/kv": "^2.0.0",
@@ -20,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
